# fast-api

./: .dockerignore  .pre-commit-config.yaml  README.md  sonar-project.properties
.github/workflows/: branch.yml  cron.yml  main.yml  pr.yml  sonar.yml
app/: pyproject.toml
docker/: Dockerfile  compose.yml
fast-api/: pyproject.toml
fast-api/src/: main.py
fast-api/tests/: test_main.py
fast-api/vuln/: vuln.py
